cleaned up some classes and fixed the album name wrapping in player

--- a/i/style.sass
+++ b/i/style.sass
@@ -280,7 +280,8 @@ footer
 
 $progress-bar-height: 10px
 info
-  width: 50%
+  color: $color-leland
+  width: 70%
   font-weight: 300
   albumart
     width: $info-album-height
@@ -289,12 +290,12 @@ info
     float: left
     margin-right: 10px
   name, artistalbum
-    overflow: hidden
-    white-space: nowrap
     text-overflow: ellipsis
+    white-space: nowrap
+    overflow: hidden
+    display: block
   name
     margin-top: 4px
-    display: block
     font-size: 19px
     color: $color-sagan
   artistalbum
@@ -302,7 +303,7 @@ info
     color: $color-leland
 
 player
-  width: 50%
+  width: 30%
   min-width: 240px
   white-space: nowrap
   overflow: hidden
